--- a/Test Rosenbrock 50-2.ipynb
+++ b/Test Rosenbrock 50-2.ipynb
@@ -49,8 +49,8 @@
    "outputs": [],
    "source": [
     "# init\n",
-    "steepness = 30    # steepness factor\n",
-    "num_blocks = 1    # number of expression blocks\n",
+    "steepness = 50    # steepness factor\n",
+    "num_blocks = 2    # number of expression blocks\n",
     "num_data = 5000   # number of data\n",
     "test_size = 1000  # number of test size\n",
     "val_size = 1000   # number of validation size\n",
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [10:58<00:00,  1.52it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 1000/1000 [2:37:18<00:00,  9.44s/it]\n"
      ]
     },
     {
@@ -132,13 +132,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      1.583502               0.0      0.657292\n",
-      "std       2.198429               0.0      1.940810\n",
-      "min       0.000007               0.0      0.091565\n",
-      "25%       0.125648               0.0      0.342334\n",
-      "50%       0.648800               0.0      0.683583\n",
-      "75%       2.039892               0.0      0.794763\n",
-      "max      11.392356               0.0     60.526846\n",
+      "mean      2.594323               0.0      9.437726\n",
+      "std       3.359221               0.0      9.982172\n",
+      "min       0.000433               0.0      0.371946\n",
+      "25%       0.171067               0.0      3.400637\n",
+      "50%       1.217010               0.0      6.230896\n",
+      "75%       3.839457               0.0     10.999128\n",
+      "max      20.375223               0.0     60.679579\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -162,7 +162,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_exact_e.csv\")"
+    "df.to_csv(\"result/rb_exact_50-2.csv\")"
    ]
   },
   {
@@ -193,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [13:44<00:00,  1.21it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 1000/1000 [2:24:26<00:00,  8.67s/it]\n"
      ]
     },
     {
@@ -202,14 +202,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      3.936884          0.030167      0.819774\n",
-      "std       2.994132          0.096639      0.167056\n",
-      "min       0.000821          0.000000      0.294834\n",
-      "25%       1.430063          0.000000      0.696194\n",
-      "50%       3.450611          0.000000      0.796274\n",
-      "75%       5.900992          0.000000      0.905328\n",
-      "max      16.615991          0.485656      1.556693\n",
-      "Number of infeasible solution: 120\n"
+      "mean      7.725639          0.099861      8.661723\n",
+      "std       4.482826          0.589254     15.877026\n",
+      "min       0.058280          0.000000      0.653168\n",
+      "25%       4.481548          0.000000      0.887213\n",
+      "50%       7.139306          0.000000      1.007757\n",
+      "75%      10.094171          0.000000      7.223290\n",
+      "max      27.025234          9.499012     60.751676\n",
+      "Number of infeasible solution: 91\n"
      ]
     }
    ],
@@ -235,7 +235,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_heur_rnd_e.csv\")"
+    "df.to_csv(\"result/rb_heur_rnd_50-2.csv\")"
    ]
   },
   {
@@ -266,7 +266,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [21:34<00:00,  1.29s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 1000/1000 [2:51:33<00:00, 10.29s/it]\n"
      ]
     },
     {
@@ -274,15 +274,15 @@
      "output_type": "stream",
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000            1000.0   1000.000000\n",
-      "mean      1.583312               0.0      1.289498\n",
-      "std       2.198417               0.0      0.241542\n",
-      "min       0.000007               0.0      0.618457\n",
-      "25%       0.125648               0.0      1.137501\n",
-      "50%       0.648800               0.0      1.260613\n",
-      "75%       2.039892               0.0      1.445866\n",
-      "max      11.392356               0.0      2.357556\n",
-      "Number of infeasible solution: 0\n"
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean      4.763016          0.052960     10.288159\n",
+      "std      39.801592          0.421262     15.980096\n",
+      "min       0.000433          0.000000      1.360606\n",
+      "25%       0.206899          0.000000      2.132333\n",
+      "50%       1.286711          0.000000      2.674155\n",
+      "75%       4.159335          0.000000      9.040735\n",
+      "max    1149.403532          5.094683     68.908361\n",
+      "Number of infeasible solution: 23\n"
      ]
     }
    ],
@@ -308,7 +308,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_heur_rens_e.csv\")"
+    "df.to_csv(\"result/rb_heur_rens_50-2.csv\")"
    ]
   },
   {
@@ -339,7 +339,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:10<00:00, 14.27it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:26<00:00,  6.80it/s]\n"
      ]
     },
     {
@@ -348,13 +348,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean     68.829961               0.0      0.069554\n",
-      "std      42.395181               0.0      0.025004\n",
-      "min       4.334028               0.0      0.058867\n",
-      "25%      32.603227               0.0      0.061585\n",
-      "50%      68.051118               0.0      0.062344\n",
-      "75%      90.896112               0.0      0.063356\n",
-      "max     188.935700               0.0      0.174129\n",
+      "mean    532.157325               0.0      0.146008\n",
+      "std     363.175683               0.0      0.045320\n",
+      "min      75.030866               0.0      0.105247\n",
+      "25%     186.276981               0.0      0.121865\n",
+      "50%     470.379688               0.0      0.124276\n",
+      "75%     889.177330               0.0      0.154756\n",
+      "max    1217.174467               0.0      0.355438\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -378,7 +378,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_heur_n1_e.csv\")"
+    "df.to_csv(\"result/rb_heur_n1_50-2.csv\")"
    ]
   },
   {
@@ -409,7 +409,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [03:39<00:00,  4.55it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [07:35<00:00,  2.20it/s]\n"
      ]
     },
     {
@@ -418,13 +418,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      6.205913               0.0      0.219125\n",
-      "std       8.661385               0.0      0.306805\n",
-      "min       0.000007               0.0      0.060446\n",
-      "25%       0.414089               0.0      0.106020\n",
-      "50%       2.077103               0.0      0.171939\n",
-      "75%       8.261314               0.0      0.249318\n",
-      "max      41.236671               0.0      8.476055\n",
+      "mean    124.889115               0.0      0.454240\n",
+      "std     238.139014               0.0      2.342601\n",
+      "min       0.037609               0.0      0.108486\n",
+      "25%      10.780444               0.0      0.139297\n",
+      "50%      29.830091               0.0      0.169687\n",
+      "75%      78.745917               0.0      0.230675\n",
+      "max     972.548668               0.0     52.469645\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -448,7 +448,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_heur_n3_e.csv\")"
+    "df.to_csv(\"result/rb_heur_n3_50-2.csv\")"
    ]
   },
   {
@@ -515,52 +515,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0  train_loss: 75.50177764892578\n",
-      "epoch: 1  train_loss: 28.326618194580078\n",
-      "epoch: 2  train_loss: 17.718215942382812\n",
-      "epoch: 3  train_loss: 13.486343383789062\n",
-      "epoch: 4  train_loss: 10.9638032913208\n",
-      "epoch: 5  train_loss: 9.655780792236328\n",
-      "epoch: 6  train_loss: 8.1796293258667\n",
-      "epoch: 7  train_loss: 7.549465656280518\n",
-      "epoch: 8  train_loss: 7.166077136993408\n",
-      "epoch: 9  train_loss: 6.627071857452393\n",
-      "epoch: 10  train_loss: 6.5086774826049805\n",
-      "epoch: 11  train_loss: 6.221748352050781\n",
-      "epoch: 12  train_loss: 5.959054946899414\n",
-      "epoch: 13  train_loss: 6.166877269744873\n",
-      "epoch: 14  train_loss: 5.924166202545166\n",
-      "epoch: 15  train_loss: 5.991180419921875\n",
-      "epoch: 16  train_loss: 5.725766658782959\n",
-      "epoch: 17  train_loss: 5.4449076652526855\n",
-      "epoch: 18  train_loss: 5.6094255447387695\n",
-      "epoch: 19  train_loss: 5.469568729400635\n",
-      "epoch: 20  train_loss: 5.549188613891602\n",
-      "epoch: 21  train_loss: 5.974689960479736\n",
-      "epoch: 22  train_loss: 5.536171913146973\n",
-      "epoch: 23  train_loss: 5.303388595581055\n",
-      "epoch: 24  train_loss: 5.407116889953613\n",
-      "epoch: 25  train_loss: 5.156532287597656\n",
-      "epoch: 26  train_loss: 5.7454328536987305\n",
-      "epoch: 27  train_loss: 5.5257248878479\n",
-      "epoch: 28  train_loss: 5.6164374351501465\n",
-      "epoch: 29  train_loss: 5.893161296844482\n",
-      "epoch: 30  train_loss: 5.4228596687316895\n",
-      "epoch: 31  train_loss: 5.763495922088623\n",
-      "epoch: 32  train_loss: 5.275852203369141\n",
-      "epoch: 33  train_loss: 5.603532314300537\n",
-      "epoch: 34  train_loss: 5.106441974639893\n",
-      "epoch: 35  train_loss: 5.611496448516846\n",
-      "epoch: 36  train_loss: 5.434036731719971\n",
-      "epoch: 37  train_loss: 5.217209339141846\n",
-      "epoch: 38  train_loss: 5.443210124969482\n",
-      "epoch: 39  train_loss: 5.354318618774414\n",
-      "epoch: 40  train_loss: 5.147873878479004\n",
-      "epoch: 41  train_loss: 5.242734432220459\n",
-      "epoch: 42  train_loss: 5.55929708480835\n",
-      "epoch: 43  train_loss: 5.2413506507873535\n",
-      "epoch: 44  train_loss: 5.266549110412598\n",
-      "epoch: 45  train_loss: 5.45648717880249\n",
+      "epoch: 0  train_loss: 141.621337890625\n",
+      "epoch: 1  train_loss: 54.17548370361328\n",
+      "epoch: 2  train_loss: 36.103633880615234\n",
+      "epoch: 3  train_loss: 29.21131134033203\n",
+      "epoch: 4  train_loss: 25.601943969726562\n",
+      "epoch: 5  train_loss: 23.98379898071289\n",
+      "epoch: 6  train_loss: 21.947715759277344\n",
+      "epoch: 7  train_loss: 20.99851417541504\n",
+      "epoch: 8  train_loss: 19.32303237915039\n",
+      "epoch: 9  train_loss: 18.250574111938477\n",
+      "epoch: 10  train_loss: 16.494781494140625\n",
+      "epoch: 11  train_loss: 16.3751277923584\n",
+      "epoch: 12  train_loss: 15.23391056060791\n",
+      "epoch: 13  train_loss: 15.205641746520996\n",
+      "epoch: 14  train_loss: 14.716923713684082\n",
+      "epoch: 15  train_loss: 14.3939208984375\n",
+      "epoch: 16  train_loss: 15.067134857177734\n",
+      "epoch: 17  train_loss: 13.788334846496582\n",
+      "epoch: 18  train_loss: 13.365486145019531\n",
+      "epoch: 19  train_loss: 13.073370933532715\n",
+      "epoch: 20  train_loss: 13.448643684387207\n",
+      "epoch: 21  train_loss: 13.225969314575195\n",
+      "epoch: 22  train_loss: 12.926955223083496\n",
+      "epoch: 23  train_loss: 13.177831649780273\n",
+      "epoch: 24  train_loss: 12.673274040222168\n",
+      "epoch: 25  train_loss: 12.598808288574219\n",
+      "epoch: 26  train_loss: 12.481254577636719\n",
+      "epoch: 27  train_loss: 12.475635528564453\n",
+      "epoch: 28  train_loss: 12.355131149291992\n",
+      "epoch: 29  train_loss: 12.147162437438965\n",
+      "epoch: 30  train_loss: 12.092373847961426\n",
+      "epoch: 31  train_loss: 12.333332061767578\n",
+      "epoch: 32  train_loss: 12.452556610107422\n",
+      "epoch: 33  train_loss: 12.790414810180664\n",
+      "epoch: 34  train_loss: 12.311833381652832\n",
+      "epoch: 35  train_loss: 12.282333374023438\n",
+      "epoch: 36  train_loss: 12.386061668395996\n",
+      "epoch: 37  train_loss: 12.371739387512207\n",
+      "epoch: 38  train_loss: 11.871426582336426\n",
+      "epoch: 39  train_loss: 11.900737762451172\n",
+      "epoch: 40  train_loss: 11.864086151123047\n",
+      "epoch: 41  train_loss: 12.067644119262695\n",
+      "epoch: 42  train_loss: 12.230107307434082\n",
+      "epoch: 43  train_loss: 11.932770729064941\n",
+      "epoch: 44  train_loss: 11.582271575927734\n",
+      "epoch: 45  train_loss: 11.275949478149414\n",
+      "epoch: 46  train_loss: 11.170136451721191\n",
+      "epoch: 47  train_loss: 11.289389610290527\n",
+      "epoch: 48  train_loss: 11.483589172363281\n",
+      "epoch: 49  train_loss: 11.139780044555664\n",
+      "epoch: 50  train_loss: 10.774820327758789\n",
+      "epoch: 51  train_loss: 11.360343933105469\n",
       "Early stopping!!!\n"
      ]
     },
@@ -600,7 +606,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 431.57it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 371.65it/s]\n"
      ]
     },
     {
@@ -608,15 +614,15 @@
      "output_type": "stream",
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000            1000.0   1000.000000\n",
-      "mean      3.889981               0.0      0.002046\n",
-      "std       3.461665               0.0      0.000656\n",
-      "min       0.007193               0.0      0.000998\n",
-      "25%       1.203282               0.0      0.001989\n",
-      "50%       2.713893               0.0      0.002000\n",
-      "75%       5.774637               0.0      0.002241\n",
-      "max      18.585950               0.0      0.005578\n",
-      "Number of infeasible solution: 0\n"
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean      9.602252          0.000048      0.002301\n",
+      "std       6.035786          0.001523      0.000689\n",
+      "min       0.118130          0.000000      0.000996\n",
+      "25%       4.764137          0.000000      0.002000\n",
+      "50%       9.106999          0.000000      0.002005\n",
+      "75%      12.689323          0.000000      0.002566\n",
+      "max      35.417544          0.048146      0.006606\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
@@ -648,7 +654,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_nm_e.csv\")"
+    "df.to_csv(\"result/rb_nm_50-2.csv\")"
    ]
   },
   {
